--- a/DATN_F21/src/main/resources/templates/LayoutUser/myAccount/_menu.html
+++ b/DATN_F21/src/main/resources/templates/LayoutUser/myAccount/_menu.html
@@ -1,13 +1,12 @@
 <div xmlns:th = "http://www.thymeleaf.org">	
 	<div class="ltn__tab-menu-list mb-50">
-		<div class="nav">
+		<div class="nav" style="border-radius: 5px;">
 			<a href="/index">Trang Chủ<i class="fas fa-home"></i></a>
 			<a href="/account/information"> Hồ Sơ<i class="fas fa-user"></i></a>      
 			 <a href="/account/address">Địa Chỉ <i class="fas fa-map-marker-alt"></i></a>
 			<a href="/account/change_password">Đổi Mật Khẩu<i class="fas fa-user-edit"></i></a>
 			<a href="/account/order">Đơn Hàng<i class="fas fa-file-alt"></i></a>
-			<a href="/account/wallet">Ví Điện Tử<i class="fas fa-money-bill"></i></a>
-			<!-- <a href="/account/cardlink">Liên Kết Thẻ<i class="fas fa-money-bill"></i></a> -->			
+			<a href="/account/wallet">Ví Của Bạn<i class="fas fa-money-bill"></i></a>		
 			<a href="/account/transaction">Lịch sử giao dịch<i class="fas fa-money-bill"></i></a>
 			<a href="/security/logoff">Đăng Xuất<i class="fas fa-sign-out-alt"></i></a>
 		</div>
