--- a/DATN_F21/src/main/resources/templates/viewsAdmin/Authorization.html
+++ b/DATN_F21/src/main/resources/templates/viewsAdmin/Authorization.html
@@ -3,7 +3,7 @@
 	th:replace="~{/layoutAdmin/index :: dynamic(~{:: main})}">
 <body>
 	<main class="Auth" style="background-color: white; min-height: 500px" ng-controller="authorization-ctrl">
-			<div class="container_Store">
+			<div class="container_Store" >
 				<div class="row">
 					<div class="col-sm-5"></div>
 					<h2  style="color: orange; margin-top: 20px; font-size: 30px">Phân quyền</h2>
@@ -13,12 +13,13 @@
 						<form  ng-click="search(name)">
 							<label class="lable_Search">Tìm kiếm </label> 
 							<input ng-model="name" type="text" style="width: 30%" name="" id="" placeholder="Nhập tên cửa hàng...." class="input_search_store" required>			
-							<button ng-click="search(name)" class="btn-find" type="submit">Tìm</button>
+							<button style="border-radius: 5px;" ng-click="search(name)" class="btn-find" type="submit">Tìm</button>
 						</form>
 					</div>
 				
 				</div>
-				<div style="margin-top: 10px">
+				<hr>
+				<div style="margin-top: 10px" ng-show="pager.users.length>0">
 					<table class="table">
 						<thead>
 							<tr>
@@ -40,7 +41,7 @@
 					</table>
 				</div>
 		</div>	
-		<div class="foodterUL">
+		<div class="foodterUL" ng-show="pager.users.length>0">
 			<nav aria-label="Page navigation example">
 				<ul class="pagination">
 				  <li class="page-item"><a ng-click="pager.first()" class="page-link" href="#"><=</a></li>
@@ -50,6 +51,9 @@
 				  <li class="page-item"><a ng-click="pager.last()" class="page-link" href="#">=></a></li>
 				</ul>
 			  </nav>
+		</div>
+		<div style="color: rgb(0, 0, 0); background-color:#e5e5e5; padding-bottom:1px; padding-top: 10px; padding-left: 10px; padding-right: 5px; margin-left: 10px; margin-right: 10px;" ng-show="pager.users.length<1">
+				<h5>Không tìm thấy người dùng!</h5>				
 		</div>
 	</main>
 
