--- a/DATN_F21/src/main/resources/templates/viewsAdmin/statisticalAd.html
+++ b/DATN_F21/src/main/resources/templates/viewsAdmin/statisticalAd.html
@@ -27,7 +27,7 @@
           </div>
         </div>
       <hr>
-        <div class="table_statiscal">
+        <div class="table_statiscal" ng-show="pager.items.length>0">
             <table class="table">
                 <thead class="thead-light">
                   <tr>
@@ -52,7 +52,7 @@
               </table>
      	   </div>
       </div>
-      <div class="foodterUL">
+      <div class="foodterUL" ng-show="pager.items.length>0">
 			<nav aria-label="Page navigation example">
 				<ul class="pagination">
 				  <li class="page-item"><a ng-click="pager.first()" class="page-link" href=""><=</a></li>
@@ -63,8 +63,8 @@
 				</ul>
 			  </nav>
 		</div>
-		<div style="color: blue; background-color:#c2fda0; padding-bottom:1px; padding-top: 1px; padding-left: 5px; padding-right: 5px;" ng-show="pager.items.length<1">
-				<p>Chưa có dữ liệu để thống kê!</p>				
+		<div style="color: rgb(0, 0, 0); background-color:#e5e5e5; padding-bottom:1px; padding-top: 10px; padding-left: 10px; padding-right: 5px; margin-left: 10px; margin-right: 10px;" ng-show="pager.items.length<1">
+				<h5>Chưa có dữ liệu để thống kê!</h5>				
 		</div>
    </main>
 </body>
