--- a/DATN_F21/src/main/resources/templates/viewsUser/myAccount/change_password.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/myAccount/change_password.html
@@ -6,26 +6,36 @@
 	<div class="tab-pane fade active show">
               <div class="ltn__myaccount-tab-content-inner" ng-controller="changepassword-ctrl">
                   <div class="ltn__form-box">
-                      <form th:action="@{/account/change_password}" method="post" name="form_changepassword"> 
-                          <fieldset>
+                      <form name="form_changepassword"> 
+                          <fieldset style="border-radius: 5px;">
                               <legend>Đổi Mật Khẩu</legend>
                               <p>Để đảm bảo tài khoản, vui lòng không chia sẽ mật khẩu cho người khác.</p>
                               <div class="row">
                                   <div class="col-md-12">
-                                      <label>Mật khẩu hiện tại*:</label>
-                                      <span style="color: red;" ng-hide="form_changepassword.pw_present.$valid">Không được để trống</span>
-                                      <input ng-model="pw_present" type="password" name="pw_present" required>
+                                      <label>Mật khẩu hiện tại*:</label>                     
+                                      <input style="border-radius: 5px;" ng-model="change_password.pw_present" type="password" name="pw_present" ng-required="true" ng-minlength="6" >
+                                      <div style="margin-top: -30px; margin-bottom: 20px; color: Red">
+										<span ng-show="form_changepassword.pw_present.$error.required">Không bỏ trống mật khẩu hiện tại</span>
+										<span class="error" ng-show="form_changepassword.pw_present.$error.minlength">Mật khẩu ít nhất phải 6 ký tự</span>	
+									  </div>
+                                      
                                       <label>Mật khẩu mới*:</label>
-                                      <span style="color: red;" ng-hide="form_changepassword.pw_new.$valid">Không được để trống</span>
-                                      <input ng-model="pw_new" type="password" name="pw_new" required>
+                                      <input style="border-radius: 5px;" ng-model="change_password.pw_new" type="password" name="pw_new" ng-required="true" ng-minlength="6" >
+                                      <div style="margin-top: -30px; margin-bottom: 20px; color: Red">
+										<span ng-show="form_changepassword.pw_new.$error.required">Không bỏ trống mật khẩu mới</span>
+										<span class="error" ng-show="form_changepassword.pw_new.$error.minlength">Mật khẩu ít nhất phải 6 ký tự</span>	
+									  </div>
+                                      
                                       <label>Xác nhận mật khẩu mới*:</label>
-                                      <span style="color: red;" ng-hide="form_changepassword.pw_confirm.$valid">Không được để trống</span>
-                                      <input ng-model="pw_confirm" type="password" name="pw_confirm" required>
+                                      <input style="border-radius: 5px;" ng-model="change_password.pw_confirm" type="password" name="pw_confirm" ng-required="true" ng-minlength="6" >
+                                      <div style="margin-top: -30px; margin-bottom: 20px; color: Red">
+										<span ng-show="form_changepassword.pw_confirm.$error.required">Không bỏ trống mật khẩu xác nhận</span>
+										<span class="error" ng-show="form_changepassword.pw_confirm.$error.minlength">Mật khẩu ít nhất phải 6 ký tự</span>	
+									  </div>
                                   </div>
                               </div>
-                              <spam th:text="${messenger}"></spam>
                               <div class="btn-wrapper text-center">
-                                  <button ng-disabled="!form_changepassword.$valid" type="submit" class="btn theme-btn-1 btn-effect-1 text-uppercase">ĐỔI MẬT KHẨU</button>
+                                  <button style="border-radius: 5px;" ng-disabled="!form_changepassword.$valid" ng-click="change()" class="btn theme-btn-1 btn-effect-1 text-uppercase">ĐỔI MẬT KHẨU</button>
                               </div>
                               <div class="by-agree ">
                                   <a href="login.html">QUYÊN MẬT KHẨU</a>
