--- a/DATN_F21/src/main/resources/templates/viewsAdmin/ListUser.html
+++ b/DATN_F21/src/main/resources/templates/viewsAdmin/ListUser.html
@@ -126,14 +126,15 @@
 								<form ng-click="search(name)">
 									<label class="lable_Search">Tìm kiếm </label> 
 									<input ng-model="name" type="text" style="width: 60%" name="" id="" placeholder="Nhập tên người dùng...." class="input_search_store" required>	
-								    <button ng-click="search(name)" class="btn-find" type="submit">Tìm</button>
+								    <button style="border-radius: 5px;" ng-click="search(name)" class="btn-find" type="submit">Tìm</button>
 								</form>
 								</div>
 								
 							</div>
 							
 						</div>
-						<div class="tableUL">
+						<hr>
+						<div class="tableUL" ng-show="pager.items.length>0">
 							<table class="table">
 								<thead>
 									<tr>
@@ -172,7 +173,7 @@
 						</div>
 				
 					</div>
-					<div class="foodterUL">
+					<div class="foodterUL" ng-show="pager.items.length>0">
 						<nav aria-label="Page navigation example">
 							<ul class="pagination">
 							  <li class="page-item"><a ng-click="pager.first()" class="page-link" href="#"><=</a></li>
@@ -182,6 +183,9 @@
 							  <li class="page-item"><a ng-click="pager.last()" class="page-link" href="#">=></a></li>
 							</ul>
 						  </nav>
+					</div>
+					<div style="color: rgb(0, 0, 0); background-color:#e5e5e5; padding-bottom:1px; padding-top: 10px; padding-left: 10px; padding-right: 5px; margin-left: 10px; margin-right: 10px;" ng-show="pager.items.length<1">
+							<h5>Không tìm thấy người dùng!</h5>				
 					</div>
                  </div>
              </div>
