--- a/DATN_F21/src/main/resources/templates/viewsUser/myAccount/transaction.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/myAccount/transaction.html
@@ -9,13 +9,13 @@
                     <h4>Lịch Sử Giao Dịch</h4>
                     <div class="row">
                     	<div class="col-lg-4">
-                    		Từ ngày <input type="date" ng-model="finddate.startDate">
+                    		Từ ngày <input type="date" ng-model="finddate.startDate" style="border-radius: 5px;">
                     	</div>
                     	<div class="col-lg-4">
-                    		Đến ngày <input type="date" ng-model="finddate.endDate">
+                    		Đến ngày <input type="date" ng-model="finddate.endDate" style="border-radius: 5px;">
                     	</div>
                     	<div class="col-lg-4">
-                    		<button ng-click="find()" style="margin-top: 32px;"  type="submit" class="btn theme-btn-1 btn-effect-1">Tìm</button>
+                    		<button ng-click="find()" style="margin-top: 32px; border-radius: 5px;"  type="submit" class="btn theme-btn-1 btn-effect-1">Tìm</button>
                     	</div>
                     </div>
                     <div class="row">
@@ -24,9 +24,9 @@
 								<div class="shoping-cart-table table-responsive">
 									<table class="table table-hover table-borderless table-bordered">
 										<tbody>												
-											<tr ng-repeat="item in pager.items">
+											<tr ng-repeat="item in pager.items" style="border-radius: 5px;">
 												<td class="cart-product-image">
-													<img src="/img/logo-transaction.jpg" alt="#">	 
+													<img style="border-radius: 5px;" src="/img/logo-transaction.jpg" alt="#">	 
 												</td>
 												<td style="width: 380px;">
 													<div class="row">
@@ -36,7 +36,7 @@
 												</td>
 												<td>
 													<div class="row">
-														<div class="col-lg-12"><h4>{{item.money | number:2}} $</h4></div>
+														<div class="col-lg-12"><h4>{{item.money | number:2}} VND</h4></div>
 														<div class="col-lg-12"><p>{{item.status?'Hoàn tất':'Chưa hoàn tất'}}</p></div>
 													</div>	
 												</td>											
