--- a/DATN_F21/src/main/resources/templates/viewsUser/register.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/register.html
@@ -53,8 +53,7 @@
 								<div style="margin-top: -30px; margin-bottom: 20px; color: Red">
 									<span ng-show="dk.password.$error.required">Không
 										bỏ trống Password</span> <span class="error"
-										ng-show="dk.password.$error.minlength">Tên
-										đăng nhập ít nhất phải 6 ký tự</span>
+										ng-show="dk.password.$error.minlength">Password ít nhất phải 6 ký tự</span>
 								</div>
 
 								<div class="form-group">
