--- a/DATN_F21/src/main/resources/templates/LayoutUser/myAccount/index.html
+++ b/DATN_F21/src/main/resources/templates/LayoutUser/myAccount/index.html
@@ -29,6 +29,8 @@
 <!-- Trung thêm -->
 <link href="/css/mycss.css" rel="stylesheet">
 
+<link href="/css/seller.css" rel="stylesheet">
+
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
