--- a/DATN_F21/src/main/resources/templates/viewsSeller/wait.html
+++ b/DATN_F21/src/main/resources/templates/viewsSeller/wait.html
@@ -1,56 +1,88 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-	th:replace="~{/layoutSeller/index :: dynamic(~{:: main})}">
-<body>
-<main>
-	<div class="xacnhan" style="text-align: center;">
-	<label class="title3" style="color: orange; margin-top: 20px; font-size: 30px">Đơn Hàng Chờ Xác Nhận</label>
-            <div class="search3">
-                <div class="row">
-                    
-                            <div class="col-sm-4 btn_tim">
-                                <button class="btn btn-outline-success" style="margin-left: -30px" type="submit">Chọn tất cả</button>
-                            </div>
-                        
+<html
+  xmlns:th="http://www.thymeleaf.org"
+  th:replace="~{/layoutSeller/index :: dynamic(~{:: main})}"
+>
+  <body>
+    <main>
+      <div class="xacnhan" style="text-align: center">
+        <label
+          class="title3"
+          style="color: orange; margin-top: 20px; font-size: 30px"
+          >Đơn Hàng Chờ Xác Nhận</label
+        >
+        <div class="search3">
+          <div class="row">
+            <div class="col-sm-4 btn_tim">
+              <button
+                class="btn btn-outline-success"
+                ng-click="Order.getCheckAllStatusOne()"
+                style="margin-left: -30px"
+                type="submit"
+              >
+                Chọn tất cả
+              </button>
             </div>
-            </div>
-            <div class="bang2">
-                <table class="table tablea">
-                    <thead class="thead-light">
-                        <tr>
-                            <th class="id">Id đơn hàng</th>
-                            <th class="sanpham">Ngày đặt hàng</th>
-                            <th class="sanpham">Người mua</th>
-                            <th class="tongtien">Tổng tiền</th>
-                            <th class="tongtien">Địa chỉ</th>
-                            <th class="thao-tac">Xác nhận</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-
-                        <tr ng-repeat="detail in Order.OrderOne">
-                            <td scope="row">{{detail.id}}</td>
-                            <td>{{detail.bookingdate}}</td>
-                            <td>{{detail.user.fullname}}</td>
-                            <td>{{detail.totalamount | number : 2}}</td>
-                            <td>{{detail.address.address}}</td>
-                            <td>
-                              <a href="#" ng-click="Order.orderConfirm(detail.id)"><svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" fill="currentColor" class="bi bi-calendar-check" viewBox="0 0 16 16">
-                                <path d="M10.854 7.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 9.793l2.646-2.647a.5.5 0 0 1 .708 0z"/>
-                                <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z"/>
-                              </svg></a>
-                              <a href="#" ng-click="Order.orderRefuse(detail.id)"><svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" fill="currentColor" class="bi bi-calendar-x" viewBox="0 0 16 16">
-                                <path d="M6.146 7.146a.5.5 0 0 1 .708 0L8 8.293l1.146-1.147a.5.5 0 1 1 .708.708L8.707 9l1.147 1.146a.5.5 0 0 1-.708.708L8 9.707l-1.146 1.147a.5.5 0 0 1-.708-.708L7.293 9 6.146 7.854a.5.5 0 0 1 0-.708z"/>
-                                <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z"/>
-                              </svg></a>
-                               
-                            </td>
-                            
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
+          </div>
         </div>
-</main>
-</body>
+        <div class="bang2">
+          <table class="table tablea">
+            <thead class="thead-light">
+              <tr>
+                <th class="id">Id đơn hàng</th>
+                <th class="sanpham">Ngày đặt hàng</th>
+                <th class="sanpham">Người mua</th>
+                <th class="tongtien">Tổng tiền</th>
+                <th class="tongtien">Địa chỉ</th>
+                <th class="thao-tac">Xác nhận</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr ng-repeat="detail in Order.OrderOne">
+                <td scope="row"><a th:href="@{|/viewsSeller/OrderDetail/{{detail.id}}|}"> {{detail.id}}</a></td>
+                <td>{{detail.bookingdate}}</td>
+                <td>{{detail.user.fullname}}</td>
+                <td>{{detail.totalamount | number : 2}}</td>
+                <td>{{detail.address.address}}</td>
+                <td>
+                  <a href="#" ng-click="Order.orderConfirm(detail.id)"
+                    ><svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="23"
+                      height="23"
+                      fill="currentColor"
+                      class="bi bi-calendar-check"
+                      viewBox="0 0 16 16"
+                    >
+                      <path
+                        d="M10.854 7.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 9.793l2.646-2.647a.5.5 0 0 1 .708 0z"
+                      />
+                      <path
+                        d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z"
+                      /></svg>
+                    </a>
+                  <a href="#" ng-click="Order.orderRefuse(detail.id)"
+                    ><svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="23"
+                      height="23"
+                      fill="currentColor"
+                      class="bi bi-calendar-x"
+                      viewBox="0 0 16 16"
+                    >
+                      <path
+                        d="M6.146 7.146a.5.5 0 0 1 .708 0L8 8.293l1.146-1.147a.5.5 0 1 1 .708.708L8.707 9l1.147 1.146a.5.5 0 0 1-.708.708L8 9.707l-1.146 1.147a.5.5 0 0 1-.708-.708L7.293 9 6.146 7.854a.5.5 0 0 1 0-.708z"
+                      />
+                      <path
+                        d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z"
+                      /></svg>
+                    </a>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
