--- a/DATN_F21/src/main/resources/templates/viewsUser/product-detail.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/product-detail.html
@@ -132,11 +132,7 @@
                                 <div class="product-hover-action">
                                     <ul>
                                         <li>
-                                            <a href="#" title="Quick View" data-toggle="modal" data-target="#quick_view_modal"> <i class="far fa-eye"></i>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="/index/cart" title="Add to Cart" data-toggle="modal" data-target="#add_to_cart_modal"> <i class="fas fa-shopping-cart"></i>
+                                            <a th:attr="ng-click=@{|cart.add(${sp.id})|}" title="Add to Cart" data-toggle="modal" data-target="#add_to_cart_modal"> <i class="fas fa-shopping-cart"></i>
                                             </a>
                                         </li>
                                     </ul>
