--- a/DATN_F21/src/main/resources/templates/viewsUser/myAccount/add_address.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/myAccount/add_address.html
@@ -43,7 +43,7 @@
                                 </div>
                             </div>
                             <div class="btn-wrapper text-center">
-                                <button class="btn bg-primary" type="submit" ng-click="add_address()">Lưu địa chỉ</button>
+                                <button class="btn bg-primary" type="submit" ng-click="addaddress()">Lưu địa chỉ</button>
                             </div>
                     </form>
                     </fieldset>
