--- a/DATN_F21/src/main/resources/templates/layoutSeller/list.html
+++ b/DATN_F21/src/main/resources/templates/layoutSeller/list.html
@@ -19,10 +19,10 @@
 								class="pcoded-micon"><i class="ti-angle-right"></i></span> <span
 								class="pcoded-mtext" data-i18n="nav.basic-components.alert">Quản lý sản phẩm</span> <span class="pcoded-mcaret"></span>
 						</a></li>
-						<li class=" "><a th:href="@{|/viewsSeller/createProduct|}"> <span
+						<!-- <li class=" "><a th:href="@{|/viewsSeller/createProduct|}"> <span
 								class="pcoded-micon"><i class="ti-angle-right"></i></span> <span
 								class="pcoded-mtext" data-i18n="nav.basic-components.breadcrumbs">Quản lý hình ảnh sản phẩm</span> <span class="pcoded-mcaret"></span>
-						</a></li>
+						</a></li> -->
 
 					</ul></li>
 				<li class="pcoded-hasmenu active pcoded-trigger"><a
